src/objects/Service__c.object
<CustomObject>
    <description>Un ensemble de prestations standards proposés aux destinataires par un relais.</description>
    <fields>
        <fullName>ID_Service__c</fullName>
        <label>Trigramme</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_du_service_translated__c</fullName>
        <label>Nom du service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_SER</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operateur__c</fullName>
        <label>Opérateur</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_OPE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceExterne__c</fullName>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tech_Operateur__c</fullName>
        <label>Tech Operateur</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>Services</fullName>
        <columns>NAME</columns>
        <columns>Operateur__c</columns>
        <columns>Tech_Operateur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>ID_Service__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Services</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Services_BNL</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>includes</operation>
            <value>DPD_BNL</value>
        </filters>
        <label>BNL</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Services_CHE</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>includes</operation>
            <value>DPD_CHE</value>
        </filters>
        <label>CHE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Services_CZE</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>includes</operation>
            <value>DPD_CZE</value>
        </filters>
        <label>CZE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Services_FR</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>includes</operation>
            <value>PUS_FR,CLP_FR</value>
        </filters>
        <label>FRA</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Services_HUN</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>includes</operation>
            <value>DPD_HUN</value>
        </filters>
        <label>HUN</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Services_TRAD</fullName>
        <columns>NAME</columns>
        <columns>Nom_du_service_translated__c</columns>
        <columns>Operateur__c</columns>
        <columns>Tech_Operateur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>ID_Service__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Services TRAD</label>
        <language>fr</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Nom du Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>